<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/onboarding_use_of_the_terms"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/onboarding_term_1"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_term_2"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_term_3"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_term_4"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_term_5"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/onboarding_btn_use_of_the_terms"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_save_information"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:text="@string/onboarding_btn_accept_use_of_the_terms"
            android:textColor="#ffffff" />
    </LinearLayout>

</ScrollView>

