<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/detail_inj_c_vaccine_fragment_txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    tools:text="@string/vaccine_tiem_nhac_bachau_hoga_uonvan"
                    android:textColor="@color/text_color"
                    android:textSize="18sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout style="@style/LinearLayoutDetailInjCScheduleFragment">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lot_number" />

                    <EditText
                        android:id="@+id/detail_inj_c_vaccine_fragment_edt_lot_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout style="@style/LinearLayoutDetailInjCScheduleFragment">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/exp_date" />

                    <EditText
                        android:focusable="false"
                        android:id="@+id/detail_inj_c_vaccine_fragment_edt_exp_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout style="@style/LinearLayoutDetailInjCScheduleFragment">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/doctor_injected" />

                    <EditText
                        android:id="@+id/detail_inj_c_vaccine_fragment_edt_doctor_injected"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout style="@style/LinearLayoutDetailInjCScheduleFragment">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nurse_injected" />

                    <EditText
                        android:id="@+id/detail_inj_c_vaccine_fragment_edt_nurse_injected"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <LinearLayout style="@style/LinearLayoutDetailInjCScheduleFragment">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/place_of_vaccination" />

                    <EditText
                        android:id="@+id/detail_inj_c_vaccine_fragment_edt_pov"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2" />
                </LinearLayout>

                <Button
                    android:id="@+id/detail_inj_c_vaccine_fragment_btn_save"
                    android:textColor="#ffff"
                    android:background="@drawable/background_btn_save_information"
                    android:layout_margin="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_save_information"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>

