<?xml version="1.0" encoding="utf-8"?>
<com.pimo.thea.vaccinesschedulemvp.heathfeed.ScrollChildSwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/health_feed_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/health_feed_rv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <RelativeLayout
            android:id="@+id/health_feed_rl_no_internet_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/health_feed_img_icon_no_internet"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_no_internet_connection" />

            <TextView
                android:id="@+id/health_feed_txt_notify_no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/health_feed_img_icon_no_internet"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:text="@string/health_feed_no_internet_connection_notify"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/health_feed_txt_notify_no_internet_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/health_feed_txt_notify_no_internet"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/health_feed_no_internet_connection_action" />

            <Button
                android:id="@+id/btn_health_feed_retry_connect_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/health_feed_txt_notify_no_internet_1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="32dp"
                android:background="@drawable/background_btn_save_information"
                android:text="@string/health_feed_retry"
                android:textColor="#fff" />
        </RelativeLayout>
    </RelativeLayout>

</com.pimo.thea.vaccinesschedulemvp.heathfeed.ScrollChildSwipeRefreshLayout>